<resources>
    <string name="app_name">FireChat</string>
    <string name="sign_out">Sign Out</string>
    <string name="send_button_label">Send</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="shared_pref_username_key">username_key</string>
    <string name="shared_pref_user_uid_key">user_uid_key</string>
    <string name="shared_pref_token_key">token_key</string>
    <string name="shared_pref_token_state_key">token_state_key</string>
    <string name="permission_denied">Permission denied</string>
    <string name="msg_length_limit">msg_length_limit</string>
    <string name="firebase_messages_child">messages</string>
    <string name="firebase_chat_photos_child">chat_photos</string>
    <string name="choose_picture">Choose picture!</string>
    <string name="message_body">body</string>
    <string name="message_title">title</string>
    <string name="message_author">author</string>
    <string name="anonymus_user">anonymous</string>
    <string name="firebase_users_child">users</string>
    <string name="greetings">Hello :)</string>
    <string name="user_uid_extra">USER_UID_EXTRA</string>
    <string name="user_name_extra">USER_NAME_EXTRA</string>
    <string name="sender_uid">senderUid</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_closed">Closed drawer</string>
    <string name="logout_title">Logout</string>
    <string name="log_out_label">Log Out</string>
    <string name="change_picture_label">Change Picture</string>
    <string name="change_name_label">Change Name</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="shared_pref_user_photo_key">pref_user_photo_key</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="new_username">New username...</string>

    <string name="title_activity_fullscreen_photo">FullscreenPhotoActivity</string>

    <string name="pref_style">NoActionBarRed</string>
    <string name="blue_theme_label">Blue Theme</string>
    <string name="red_theme_label">Red Theme</string>
    <string name="blue_theme_value">NoActionBarBlue</string>
    <string name="red_theme_value">NoActionBarRed</string>
    <string name="pref_style_key">theme_key</string>
    <string name="pref_style_label">Theme</string>
    <string name="message_hint">Write a message...</string>
    <string name="fullscren_photo">Fullscren Photo</string>
</resources>
